--- a/iSTM32PSU-F030C8.ioc
+++ b/iSTM32PSU-F030C8.ioc
@@ -27,16 +27,17 @@ Mcu.CPN=STM32F030C8T6
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=DMA
-Mcu.IP10=TIM6
+Mcu.IP10=TIM3
+Mcu.IP11=TIM6
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM3
-Mcu.IPNb=11
+Mcu.IP6=RTC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=12
 Mcu.Name=STM32F030C8Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -72,15 +73,16 @@ Mcu.Pin35=PB8
 Mcu.Pin36=PB9
 Mcu.Pin37=VP_ADC_TempSens_Input
 Mcu.Pin38=VP_ADC_Vref_Input
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin39=VP_RTC_VS_RTC_Activate
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin40=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -260,7 +262,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -294,12 +296,15 @@ TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,OCPolarity_3
 TIM1.OCPolarity_3=TIM_OCPOLARITY_LOW
 TIM1.Period=200
 TIM1.Prescaler=24
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=15
 TIM3.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM3.IC1Prescaler=TIM_ICPSC_DIV1
 TIM3.IC2Filter=15
 TIM3.IC2Polarity=TIM_ICPOLARITY_FALLING
-TIM3.IPParameters=EncoderMode,IC1Polarity,IC1Filter,IC2Polarity,IC2Filter
+TIM3.IC2Prescaler=TIM_ICPSC_DIV1
+TIM3.IPParameters=EncoderMode,IC1Polarity,IC1Filter,IC2Polarity,IC2Filter,ClockDivision,IC1Prescaler,IC2Prescaler
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=100
 TIM6.Prescaler=47999
@@ -307,6 +312,8 @@ VP_ADC_TempSens_Input.Mode=IN-TempSens
 VP_ADC_TempSens_Input.Signal=ADC_TempSens_Input
 VP_ADC_Vref_Input.Mode=IN-Vrefint
 VP_ADC_Vref_Input.Signal=ADC_Vref_Input
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
