--- a/iSTM32PSU-F030C8.ioc
+++ b/iSTM32PSU-F030C8.ioc
@@ -85,23 +85,22 @@ Mcu.Pin34=PB7
 Mcu.Pin35=PB8
 Mcu.Pin36=PB9
 Mcu.Pin37=VP_ADC_TempSens_Input
-Mcu.Pin38=VP_ADC_Vref_Input
-Mcu.Pin39=VP_RTC_VS_RTC_Activate
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_RTC_VS_RTC_Calendar
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin40=VP_RTC_VS_RTC_Calendar
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=43
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
-MxCube.Version=6.7.0
-MxDb.Version=DB.6.0.70
+MxCube.Version=6.9.2
+MxDb.Version=DB.6.0.92
 NVIC.ADC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -259,7 +258,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F030C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.3
+ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -272,10 +271,13 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=iSTM32PSU-F030C8.ioc
 ProjectManager.ProjectName=iSTM32PSU-F030C8
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=48000000
@@ -325,8 +327,6 @@ TIM6.Period=100
 TIM6.Prescaler=47999
 VP_ADC_TempSens_Input.Mode=IN-TempSens
 VP_ADC_TempSens_Input.Signal=ADC_TempSens_Input
-VP_ADC_Vref_Input.Mode=IN-Vrefint
-VP_ADC_Vref_Input.Signal=ADC_Vref_Input
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
