--- a/iSTM32PSU-F030C8.ioc
+++ b/iSTM32PSU-F030C8.ioc
@@ -32,25 +32,20 @@ Dma.SPI1_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing,OwnAddress
-I2C2.OwnAddress=0x20
-I2C2.Timing=0x20303E5D
 KeepUserPlacement=false
 Mcu.CPN=STM32F030C8T6
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=DMA
-Mcu.IP10=TIM3
-Mcu.IP11=TIM6
-Mcu.IP2=I2C1
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=TIM1
-Mcu.IPNb=12
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM3
+Mcu.IP9=TIM6
+Mcu.IPNb=10
 Mcu.Name=STM32F030C8Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -74,28 +69,30 @@ Mcu.Pin24=PA10
 Mcu.Pin25=PA11
 Mcu.Pin26=PA12
 Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PA15
+Mcu.Pin28=PF6
+Mcu.Pin29=PF7
 Mcu.Pin3=PF0-OSC_IN
-Mcu.Pin30=PB3
-Mcu.Pin31=PB4
-Mcu.Pin32=PB5
-Mcu.Pin33=PB6
-Mcu.Pin34=PB7
-Mcu.Pin35=PB8
-Mcu.Pin36=PB9
-Mcu.Pin37=VP_ADC_TempSens_Input
-Mcu.Pin38=VP_RTC_VS_RTC_Activate
-Mcu.Pin39=VP_RTC_VS_RTC_Calendar
+Mcu.Pin30=PA14
+Mcu.Pin31=PA15
+Mcu.Pin32=PB3
+Mcu.Pin33=PB4
+Mcu.Pin34=PB5
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=PB8
+Mcu.Pin38=PB9
+Mcu.Pin39=VP_ADC_TempSens_Input
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin40=VP_SYS_VS_Systick
-Mcu.Pin41=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin40=VP_RTC_VS_RTC_Activate
+Mcu.Pin41=VP_RTC_VS_RTC_Calendar
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=42
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -106,7 +103,6 @@ NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -180,10 +176,14 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=V_DAC0
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=I2C2_Reserved
+PB10.Locked=true
+PB10.Signal=GPIO_Analog
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=I2C2_Reserved
+PB11.Locked=true
+PB11.Signal=GPIO_Analog
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=V_DAC7
 PB12.Locked=true
@@ -216,10 +216,14 @@ PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=SW_B
 PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Signal=S_TIM3_CH2
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=I2C1_Reserved
+PB6.Locked=true
+PB6.Signal=GPIO_Analog
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=I2C1_Reserved
+PB7.Locked=true
+PB7.Signal=GPIO_Analog
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=I_DAC2
 PB8.Locked=true
@@ -248,6 +252,12 @@ PF1-OSC_OUT.GPIOParameters=GPIO_Label
 PF1-OSC_OUT.GPIO_Label=I_DAC5
 PF1-OSC_OUT.Locked=true
 PF1-OSC_OUT.Signal=GPIO_Output
+PF6.GPIOParameters=GPIO_Label
+PF6.GPIO_Label=Not_used
+PF6.Locked=true
+PF6.Signal=GPIO_Analog
+PF7.Locked=true
+PF7.Signal=GPIO_Analog
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -279,14 +289,15 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
 RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
+RCC.I2C1Freq_Value=8000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2C1Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
 RCC.PLLMCOFreq_Value=24000000
